# iris

./: .env  .env.example  .gitignore  CLAUDE.md  README.md  run.sh  skills.md
.claude/: settings.json
.claude/agents/: iris-draw.md  iris-widget.md
.xcode-derived/: info.plist
.xcode-derived/ModuleCache.noindex/: AVFAudio-4N6E78L5W5QLNCMPN8JHA1GI4.pcm  AVRouting-487UGXRO9602E6P1KD8JW9CZG.pcm  Accessibility-ENGL7TK1MYM8J48YT91FLL5CS.pcm  AudioToolbox-67YBYTRVJOLMGJKZLV99E2AJY.pcm  CFNetwork-AF77RLWN9JHSYJJ6FR2ZP8IHB.pcm  CoreAudio-B615ANR9O0FNPSB21412CX77V.pcm  (+54 more)
agents/: claude_code.py  codex_agent.py  iris_agent.py  pyproject.toml  run-tests.sh  run.sh  server.py  session_store.py  sessions.py  trajectory_logger.py
backend/: README.md  agent.py  app.py  claude_commander.py  pyproject.toml  run.sh
backend/grounding/: __init__.py  coordinates.py  service.py  store.py  types.py
backend/grounding/providers/: __init__.py  claude_grounding.py  noop.py
backend/orchestration/: __init__.py  arrow_policy.py  coordinates.py  intent.py  widgets.py
backend/prompts/: browser-use-SKILL.md
browser/: .env.example  README.md  package-lock.json  package.json  run.sh  stagehand-service.mjs
iPad/: LLM_HELPER.md  README.md  project.yml
iPhone/: README.md  project.yml
mac/: .env.example  README.md  index.html  package-lock.json  package.json  run.sh
tools/: claudec-iris  claudei  iris  iris-session  iris-tools.json  session-context.txt
trajectory/: next.config.ts  package-lock.json  package.json
widgets/: README.md  capture.mjs  package-lock.json  package.json
(+620 files in other folders)
