[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iris-backend"
version = "0.2.0"
description = "Iris server — sessions, agent, widgets"
requires-python = ">=3.12"
dependencies = [
    "flask==3.1.0",
    "openai",
    "httpx",
    "manim",
]

[tool.setuptools]
py-modules = ["app", "agent"]

[tool.setuptools.packages.find]
include = ["grounding*", "orchestration*"]
